{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 42,
  "lineage": "fd817b16-9af9-f97c-8f71-495379164b40",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0352bb76f0b279bb6",
            "arn": "arn:aws:ec2:us-east-1:059415731791:elastic-ip/eipalloc-0352bb76f0b279bb6",
            "association_id": "eipassoc-05e3e21bb664e5533",
            "domain": "vpc",
            "id": "eipalloc-0352bb76f0b279bb6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cf4291b032d009e7",
            "private_dns": "ip-10-0-1-92.ec2.internal",
            "private_ip": "10.0.1.92",
            "public_dns": "ec2-3-221-101-208.compute-1.amazonaws.com",
            "public_ip": "3.221.101.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:059415731791:instance/i-0b68fc9bf2349cbcf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b68fc9bf2349cbcf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-ascension-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c43d815f0b878306",
            "private_dns": "ip-10-0-11-203.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c73d933ca599888",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c10be8e12fa0741",
            "tags": {
              "Name": "private-app-server"
            },
            "tags_all": {
              "Name": "private-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a7d83b1670ddad8a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.private_app_sg",
            "aws_security_group.public_web_sg",
            "aws_subnet.private_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:059415731791:instance/i-0aabb6f38003f4b5b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aabb6f38003f4b5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-ascension-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03ef2e4d7d77adb2e",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.47",
            "public_dns": "ec2-3-237-71-47.compute-1.amazonaws.com",
            "public_ip": "3.237.71.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-074858461aa531ebb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a6cc3134470496cc",
            "tags": {
              "Name": "public-web-server"
            },
            "tags_all": {
              "Name": "public-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f408b71a803eb69b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_web_sg",
            "aws_subnet.public_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "production_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:internet-gateway/igw-035cedcd757d88d56",
            "id": "igw-035cedcd757d88d56",
            "owner_id": "059415731791",
            "tags": {
              "Name": "production-igw"
            },
            "tags_all": {
              "Name": "production-igw"
            },
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "production_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0352bb76f0b279bb6",
            "association_id": "eipassoc-05e3e21bb664e5533",
            "connectivity_type": "public",
            "id": "nat-0c375809b1e77d995",
            "network_interface_id": "eni-0cf4291b032d009e7",
            "private_ip": "10.0.1.92",
            "public_ip": "3.221.101.208",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a6cc3134470496cc",
            "tags": {
              "Name": "production-nat-gateway"
            },
            "tags_all": {
              "Name": "production-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.production_igw",
            "aws_subnet.public_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:route-table/rtb-0a3fe272102f6cab0",
            "id": "rtb-0a3fe272102f6cab0",
            "owner_id": "059415731791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c375809b1e77d995",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.production_igw",
            "aws_nat_gateway.production_nat",
            "aws_subnet.public_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:route-table/rtb-0dda521e4a6222625",
            "id": "rtb-0dda521e4a6222625",
            "owner_id": "059415731791",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035cedcd757d88d56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.production_igw",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0389ab850f007bb31",
            "route_table_id": "rtb-0a3fe272102f6cab0",
            "subnet_id": "subnet-07c10be8e12fa0741"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.production_igw",
            "aws_nat_gateway.production_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035f80105a2e14659",
            "route_table_id": "rtb-0a3fe272102f6cab0",
            "subnet_id": "subnet-07ebd3636290ed4c0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.production_igw",
            "aws_nat_gateway.production_nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_b",
            "aws_subnet.public_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a2cb7f7e4d2964c",
            "route_table_id": "rtb-0dda521e4a6222625",
            "subnet_id": "subnet-0a6cc3134470496cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.production_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_a",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb47795fee32e587",
            "route_table_id": "rtb-0dda521e4a6222625",
            "subnet_id": "subnet-0cebff1a86aa788e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.production_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:security-group/sg-0a7d83b1670ddad8a",
            "description": "Allow internal traffic from public web security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic through NAT Gateway",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7d83b1670ddad8a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from public web security group",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f408b71a803eb69b"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from public web security group",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f408b71a803eb69b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-app-sg",
            "name_prefix": "",
            "owner_id": "059415731791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-app-sg"
            },
            "tags_all": {
              "Name": "private-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.public_web_sg",
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:security-group/sg-0f408b71a803eb69b",
            "description": "Allow HTTP and SSH access to public web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f408b71a803eb69b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.111.31.108/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-web-sg",
            "name_prefix": "",
            "owner_id": "059415731791",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-web-sg"
            },
            "tags_all": {
              "Name": "public-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:subnet/subnet-07c10be8e12fa0741",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c10be8e12fa0741",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059415731791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-a"
            },
            "tags_all": {
              "Name": "private-subnet-a"
            },
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:subnet/subnet-07ebd3636290ed4c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ebd3636290ed4c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059415731791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-b"
            },
            "tags_all": {
              "Name": "private-subnet-b"
            },
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:subnet/subnet-0a6cc3134470496cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6cc3134470496cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "059415731791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:subnet/subnet-0cebff1a86aa788e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cebff1a86aa788e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "059415731791",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-b"
            },
            "tags_all": {
              "Name": "public-subnet-b"
            },
            "vpc_id": "vpc-0c2241b94f792ddbb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.production_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "production_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:059415731791:vpc/vpc-0c2241b94f792ddbb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b80498644f1c4934",
            "default_route_table_id": "rtb-0a8a2de04e910d3f7",
            "default_security_group_id": "sg-00c10cc9fec470fae",
            "dhcp_options_id": "dopt-0753752edf66c0cf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c2241b94f792ddbb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8a2de04e910d3f7",
            "owner_id": "059415731791",
            "tags": {
              "Name": "production-vpc"
            },
            "tags_all": {
              "Name": "production-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}